--- a/step_SSanitario.ipynb
+++ b/step_SSanitario.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Installazione da terminale Windows**"
+        "**Installazione da terminale Windows (prompt dei comandi)**"
       ],
       "metadata": {
         "id": "cMMpD0yJLaH2"
@@ -46,7 +46,27 @@
     {
       "cell_type": "markdown",
       "source": [
-        "2. Entrare nella cartella del progetto Django"
+        "2. Installare cors-headers"
+      ],
+      "metadata": {
+        "id": "_e5De36hTN-X"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pip install django-cors-headers"
+      ],
+      "metadata": {
+        "id": "LYxJiERlTNQE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3. Entrare nella cartella del progetto Django"
       ],
       "metadata": {
         "id": "8hIeEpt-tcqv"
@@ -66,7 +86,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "3. Fare partire il server"
+        "4. Fare partire il server"
       ],
       "metadata": {
         "id": "KKvQMdtat8mk"
