--- a/step_SSanitario.ipynb
+++ b/step_SSanitario.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Installazione da terminale Windows (prompt dei comandi)**"
+        "**Installazione da prompt dei comandi**"
       ],
       "metadata": {
         "id": "cMMpD0yJLaH2"
@@ -26,7 +26,27 @@
     {
       "cell_type": "markdown",
       "source": [
-        "1. Attivare l'ambiente virtuale"
+        "1. Andare al percorso della cartella scaricara (copia il tuo percorso al posto dell'esempio)"
+      ],
+      "metadata": {
+        "id": "7_wZAVAZcC5D"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " cd C:\\...\\PW24_WebService-main"
+      ],
+      "metadata": {
+        "id": "R0GWRg2IcDVj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2. Attivare l'ambiente virtuale"
       ],
       "metadata": {
         "id": "DzTQihPSLdZt"
@@ -46,7 +66,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "2. Installare cors-headers"
+        "3. Installare cors-headers"
       ],
       "metadata": {
         "id": "_e5De36hTN-X"
@@ -66,7 +86,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "3. Entrare nella cartella del progetto Django"
+        "4. Entrare nella cartella del progetto Django"
       ],
       "metadata": {
         "id": "8hIeEpt-tcqv"
@@ -86,7 +106,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "4. Fare partire il server"
+        "5. Fare partire il server"
       ],
       "metadata": {
         "id": "KKvQMdtat8mk"
