--- a/step_SSanitario.ipynb
+++ b/step_SSanitario.ipynb
@@ -26,7 +26,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "1. Andare al percorso della cartella scaricara (copia il tuo percorso al posto dell'esempio)"
+        "1. Andare al percorso della cartella scaricata (copia il tuo percorso al posto dell'esempio)"
       ],
       "metadata": {
         "id": "7_wZAVAZcC5D"
@@ -66,7 +66,47 @@
     {
       "cell_type": "markdown",
       "source": [
-        "3. Installare cors-headers"
+        "3. Installare psycopg2-binary (crea il collegamento tra Python e PostgreSQL)"
+      ],
+      "metadata": {
+        "id": "cVUmUQghevbS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pip install psycopg2-binary"
+      ],
+      "metadata": {
+        "id": "yvm6AaGFevyL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4. Installare requests (gestisce le richieste HTTP in Python)"
+      ],
+      "metadata": {
+        "id": "TEiprTTgewFi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pip install requests"
+      ],
+      "metadata": {
+        "id": "DK4P7M9yewPW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4. Installare django-cors-headers (gestisce le richieste CORS)"
       ],
       "metadata": {
         "id": "_e5De36hTN-X"
@@ -86,7 +126,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "4. Entrare nella cartella del progetto Django"
+        "5. Entrare nella cartella del progetto Django"
       ],
       "metadata": {
         "id": "8hIeEpt-tcqv"
@@ -106,7 +146,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "5. Fare partire il server"
+        "6. Fare partire il server"
       ],
       "metadata": {
         "id": "KKvQMdtat8mk"
