--- a/step_SSanitario.ipynb
+++ b/step_SSanitario.ipynb
@@ -66,7 +66,47 @@
     {
       "cell_type": "markdown",
       "source": [
-        "3. Installare psycopg2-binary (crea il collegamento tra Python e PostgreSQL)"
+        "3. Aggiornare pip (per ottenere l'ultima versione)"
+      ],
+      "metadata": {
+        "id": "aA2vJhq9RB2D"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "python -m pip install --upgrade pip"
+      ],
+      "metadata": {
+        "id": "K0WN_cMdRA73"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4. Installare Django (prerequisito per evitare errori futuri)"
+      ],
+      "metadata": {
+        "id": "hAAq9tSMRPNU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pip install django"
+      ],
+      "metadata": {
+        "id": "7EF8HcDRRYdO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "5. Installare psycopg2-binary (crea il collegamento tra Python e PostgreSQL)"
       ],
       "metadata": {
         "id": "cVUmUQghevbS"
@@ -86,7 +126,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "4. Installare requests (gestisce le richieste HTTP in Python)"
+        "6. Installare requests (gestisce le richieste HTTP in Python)"
       ],
       "metadata": {
         "id": "TEiprTTgewFi"
@@ -106,7 +146,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "4. Installare django-cors-headers (gestisce le richieste CORS)"
+        "7. Installare django-cors-headers (gestisce le richieste CORS)"
       ],
       "metadata": {
         "id": "_e5De36hTN-X"
@@ -126,7 +166,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "5. Entrare nella cartella del progetto Django"
+        "8. Entrare nella cartella del progetto Django"
       ],
       "metadata": {
         "id": "8hIeEpt-tcqv"
@@ -146,7 +186,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "6. Fare partire il server"
+        "9. Fare partire il server"
       ],
       "metadata": {
         "id": "KKvQMdtat8mk"
