--- a/step_SSanitario.ipynb
+++ b/step_SSanitario.ipynb
@@ -26,7 +26,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "1. Andare al percorso della cartella scaricata (copia il tuo percorso al posto dell'esempio)"
+        "1. Andare al percorso della cartella scaricata (copiare il proprio percorso al posto dell'esempio)"
       ],
       "metadata": {
         "id": "7_wZAVAZcC5D"
